<resources>
    <string name="app_name">KeyCip</string>
    <string name="welcome">Bienvenid@</string>
    <string name="welcomeExplanation">Gracias por descargar <b>KeyCip</b>. Estás más cerca de tener un mayor control de la información que viertes a los distintos servicios en internet.</string>
    <string name="continueButton">Continuar</string>
    <string name="whatIS">¿Qué hace KeyCip?</string>
    <string name="whatIsExplanation"><b>KeyCip</b> es una aplicación que permite cifrar y descifrar tanto texto, fotografías, vídeos, documentos y otros ficheros. Para ello, hace uso del algoritmo de cifrado <b>RSA (principalmente)</b>  y <b>AES</b> (generando y gestionado el conjuntos de claves)</string>
    <string name="explainButton">¿Necesitas ayuda?</string>
    <string name="genKeyButton">Ya estoy familiarizado con algoritmos de cifrado</string>
    <string name="whatIsCipher">¿Qué significa cifrar?</string>
    <string name="whatIsCipherExplanation"><b>Cifrar</b> un texto, fotografía, vídeo o documento significa ocultar su contenido de manera que solo alguien en concreto pueda conocer dicha información.\nDe esta forma, se garantiza que cuando se envíe el texto, fotografía, vídeo o documento cifrado, su contenido permanece confidencial</string>
    <string name="whatIsDecipher">¿Qué significa descifrar?</string>
    <string name="whatIsDecipherExplanation"><b>Descifrar</b> un texto, fotografía, vídeo o documento es el proceso inversos a cifrar.\n\nEn otras palabras, se devuelve el contenido original al archivo cifrado mediante un proceso determinado.</string>
    <string name="whatIsSign">¿Qué significa firmar?</string>
    <string name="whatIsSignExplanation"><b>Firmar</b> un texto, fotografía, vídeo o documento es similar a firmar una carta.\n\nEl contenido del texto o fichero no cambia ni se oculta pero permite al receptor de ellos, confirmar que quien se lo ha enviado, es efectivamente la persona que dice ser.</string>
    <string name="signCipher">¿Se puede firmar y cifrar al mismo tiempo?</string>
    <string name="signCipherExplanation">Por supuesto, de hecho es lo más recomendable.\n\nAl firmar y cifrar, consigues que el contenido de lo que envíes se mantenga confidencial, al mismo tiempo que das la oportunidad al receptor de comprobar tu identidad.</string>
    <string name="whatIsAlgorithm">¿Qué es un algoritmo de cifrado?</string>
    <string name="whatIsAlgorithmExplanation">Un <b>algoritmo de cifrado</b> es el conjunto de pasos que se tienen que realizar para cifrar, descifrar o firmar  cualquier texto o fichero.\n\nEn nuestro caso, se utiliza <b>RSA</b>.Su funcionamiento se basa en generar dos tipos de clave: una <b>clave pública</b> y una <b>clave privada</b></string>
    <string name="whatIsPublicKey">¿Qué es una clave pública?</string>
    <string name="whatIsPublicKeyExplanation">Esta es la clave que compartirás con tus contactos.\n\nCuando alguno de ellos quiera enviarte un texto o archivo cifrado para que solo tú puedas conocer el contenido real,<b>utilizará esta clave para cifrarlo</b></string>
    <string name="whatIsPrivateKey">¿Qué es una clave privada?</string>
    <string name="whatIsPrivateKeyExplanation">Con esta clave descifrarás los mensajes cifrados que te envíen.\n\nAdemás, es la clave que utilizarás para firmar un fichero o archivo.</string>
    <string name="location">¿Dónde se almacenan estas claves?</string>
    <string name="locationExplanation">Debido a que se trata de claves personales, estas nunca saldrán de tu teléfono.<b>Nosotros tampoco tenemos acceso a ellas (de hecho, la aplicación no se conecta a internet).</b>\n\nSerás tú el encargado de compartir tu clave pública con quien quieras y cuando quieras.</string>
    <string name="complicated">¿Muy complicado?</string>
    <string name="complicatedExplanation">No te preocupes, la aplicación es sencilla y te guiará en todo el proceso de <b>cifrar</b>, <b>descifrar</b> y <b>firmar</b>.Además, podrás acceder a este tutoría cuando quieras para repasar conceptos</string>
    <string name="genKey">Generar las claves públicas y privadas</string>
    <string name="genKeyExplanation"><b>Una vez que ya se tienen nociones de cifrado y descifrado, se generarán las claves para hacer uso del RSA.</b></string>
    <string name="generateKeyButton">Generar claves</string>
    <string name="genKeyAuth"><b>Primero se va a establecer un patrón numérico que se te pedirá cuando desees realizar una operación de cifrado, descifrado o firma</b></string>
    <string name="generateKeyAuthButton">Establecer patrón</string>
    <string name="insertPin"><b>Establece un patrón de cinco de cifras</b></string>
    <string name="confirmPin"><b>Confirma el patrón de cinco de cifras</b></string>
    <string name="fingerprintTitle"><b>Utilizar métodos de autenticación alternativo </b></string>
    <string name="fingerprintExplanatioon">Se ha detectado que dispones de métodos de autenticación alternativos (como la huella dactilar). ¿Quieres utilizarlos también?</string>
    <string name="errorInsertedPin">Recuerda que el PIN insertado debe tener cinco cifras</string>
    <string name="errorInsertedPinEmpty">No se ha insertado ningún PIN</string>
    <string name="errorInsertedPinDifferent">El PIN no coincide</string>
    <string name="insertName"><b>Establece el nombre al que se asociará tus claves</b></string>
    <string name="errorInsertedNameEmpty">El nombre no puede estar vacío</string>
    <string name="loadingGenKey"><b>Se están generando la clave pública y privada. Esto puede tardar unos segundos</b></string>
    <string name="shareKeyTitle"><b>Clave pública y privada generadas</b></string>
    <string name="shareKeyButton">Compartir clave pública</string>
    <string name="remindTextView"><b>Recuerda que para que tus \ncontactos puedan cifrar o \ndescifrar, se tienen que \ndescargar  la aplicación </b></string>
    <string name="shareInvitationButton">Enviar invitación para descargar aplicación</string>
    <string name="shareKeyDialog">Compartiendo tu clave pública</string>
    <string name="shareContactKeyDialog">Compartiendo la clave pública de </string>
    <string name="shareDownloadDialog">Estás a una descarga de poder controlar quién tiene acceso a la información que viertes a los distintos servicios en Internet. Descarga KeyCip \n\n<a>https://play.google.com/store/apps/details?id=jorgeff99.keymyinfo</a></string>
    <string name="grantPermissionTitle"><b>Permisos</b></string>
    <string name="grantPermissionExplanation">Necesitamos que nos concedas \npermiso al almacenamiento interno \npara cuando tengas que cifrar \no descifrar ficheros</string>
    <string name="grantPermissionButton">Conceder permisos</string>
    <string name="grantPermissionSuccessful">Permisos concedidos</string>
    <string name="grantPermissionNotSuccessful">Sin acceso al almacenamiento interno, no podrás cifrar ni descifrar ni firmar ficheros o fotografías/vídeos</string>
    <string name="grantPermissionNotFirstTime">Debes conceder permisos manualmente</string>
    <string name="grantPermissionKeyboardTitle"><b>Permisos</b></string>
    <string name="grantPermissionKeyboardExplanation">Todas las funciones de la \naplicación, están disponibles en \nun teclado para que no tengas que salir de la red social o aplicación en la que estes \ncuando desees cifrar o descifrar un archivo.</string>
    <string name="grantPermissionKeyboardButton">Establecer KeyCip \ncomo teclado principal</string>
    <string name="finishTutorialTitle"><b>Hemos tardado un poco pero ya hemos acabado </b></string>
    <string name="generateNewKeyTitle"><b>Generar un nuevo par de claves</b></string>
    <string name="generateNewKeySubTitle"><b>Se va a generar un nuevo par de claves </b></string>
    <string name="generateNewKeyWarning"><b>Ten en cuenta que esta operación\nimplica que las personas con las \nque compartiste tu clave pública \nanterior ya no podrán usarla (y \ntendrás que compartirsela otra \nvez) </b></string>
    <string name="confirmationText"><b>¿Deseas continuar?</b></string>
    <string name="qrViewTitle"><b>Compartir clave pública</b></string>
    <string name="qrViewExplanation">Pide a la persona con la que deseas compartir tu clave pública que seleccione la opción \"Escanear QR\" tras pulsar \"Añadir contacto\".</string>
    <string name="addedKeyTitle"><b>Añadir un nuevo contacto</b></string>
    <string name="confirmationAddedContact">Clave pública adjuntada correctamente</string>
    <string name="nameAddedKey">Introduce el nombre del contacto</string>
    <string name="nameHintAddedKey">Nombre contacto</string>
    <string name="contactInfo"><b>Información del contacto</b></string>
    <string name="contactInfoName">Nombre del contacto</string>
    <string name="contactInfoDate">Día ultima modificación</string>
    <string name="contactInfoQR">Clave pública</string>
    <string name="shareKeyContact">Compartir clave pública del contacto</string>
    <string name="editContact">Editar contacto</string>
    <string name="cancelContact">Borrar contacto</string>
    <string name="confirmationDeleteDialog">¿Estás seguro de que quieres borrar el contacto?</string>
    <string name="supportingConfirmationDeleteDialog">Si continuas, ya no podrás realizar operaciones de cifrado o descifrado con este contacto</string>
    <string name="changePublicKey">Cambiar la clave pública</string>
    <string name="editContactConfirmation">¿Deseas abandonar?</string>
    <string name="supportingEditContactConfirmation">Existen aún cambios no guardados que se perderán</string>
    <string name="editContactSave">Guardar cambios</string>
    <string name="editContactCancel">Cancelar cambios</string>
    <string name="filesTitle">Mis archivos</string>
    <string name="messagesChip">Mensajes</string>
    <string name="photosChip">Fotos</string>
    <string name="videosChip">Vídeos</string>
    <string name="documentsChip">PDF</string>
    <string name="otherChip">Otros ficheros</string>
    <string name="accessButton">Conceder permiso al \n almacenamiento interno</string>
    <string name="tutorialButton">Visualizar el tutorial \ncon los conceptos clave</string>
    <string name="biometricButton">Asociar desbloqueo \nbiométrico</string>
    <string name="biometricCancelButton">Eliminar desbloqueo \nbiométrico</string>
    <string name="githubExplanation">Puedes visitar nuestro repositorio público en \nel que encontrarás el código fuente de la \naplicación. Si tienes alguna propuesta, no \ndudes en participar</string>
    <string name="whichOperation">¿Qué operación deseas realizar?</string>
    <string name="encrypt">Cifrar</string>
    <string name="decrypt">Descifrar</string>
    <string name="sign">Firmar</string>
    <string name="signEncrypt">Cifrar y firmar</string>
    <string name="checkSign">Comprobar firma</string>
    <string name="whichKeyEncrypt">¿Cifrar con tu clave o usar una pública de alguno de tus contactos?</string>
    <string name="encryptForMe">Cifrar para mí</string>
    <string name="encryptOther">Cifrar para otra persona</string>
    <string name="whichKeySign">¿Comprobar firma con una clave específica o probar con todas las disponibles en tus contactos?</string>
    <string name="typeEncryptQuestion">¿Qué es lo que quieres cifrar?</string>
    <string name="typeText">Texto</string>
    <string name="typePhotoVideo">Foto o vídeo</string>
    <string name="typeFile">Otro fichero</string>
    <string name="cancel">Cancelar</string>
    <string name="appName">KeyCip</string>
    <string name="addContact">Añadir contacto</string>
    <string name="scanQR">Escanear código QR</string>
    <string name="addManual">Añadir manualmente</string>
    <string name="home">Home</string>
    <string name="keyboard">Teclado</string>
    <string name="operation">(Des)cifrar</string>
    <string name="files">Archivos</string>
    <string name="settings">Ajustes</string>
</resources>