<?xml version="1.0" encoding="utf-8"?>
<!--
* This XML is part of KeyCip Android app.
* The whole open source code is available in https://github.com/jff99/KeyCip
* Copyright (C) 2022 Jorge Fernández Fonseca
*
* This program is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addContact"
        android:title="@string/addContact"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/cameraAddContact"
                android:icon="@drawable/ic_baseline_camera"
                android:title="@string/scanQR"
                app:showAsAction="never" />
            <item
                android:id="@+id/manualAddContact"
                android:icon="@drawable/ic_baseline_edit"
                android:title="@string/addManual"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>