<?xml version="1.0" encoding="utf-8"?>
<!--
* This XML is part of KeyCip Android app.
* The whole open source code is available in https://github.com/jff99/KeyCip
* Copyright (C) 2022 Jorge Fernández Fonseca
*
* This program is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".fragments.addcontacts.AddedKeyContactFragment">

<ImageView
    android:id="@+id/icon"
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:src="@drawable/icon"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/app_name"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintVertical_bias="0">
</ImageView>

<TextView
    android:id="@+id/app_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/appName"
    android:textSize="30dp"
    android:textStyle="bold"
    android:textColor = "?android:title"
    app:layout_constraintTop_toTopOf="@id/icon"
    app:layout_constraintStart_toEndOf="@id/icon"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="@id/icon">
</TextView>


<ScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:paddingTop="30dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/icon">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/allGenKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/generateNewKeyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/generateNewKeySubTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor = "?android:title"
            android:text="@string/addedKeyTitle"
            android:textAlignment="center">
        </TextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/generateNewKeySubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/generateNewKeyTitle"
            app:layout_constraintBottom_toTopOf="@id/continueQuestion"
            app:layout_constraintStart_toStartOf="@id/generateNewKeyTitle"
            app:layout_constraintEnd_toEndOf="@id/generateNewKeyTitle"
            android:textColor = "@color/white"
            android:text="@string/confirmationAddedContact"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#4CAF50"
            app:icon="@drawable/ic_baseline_add"
            android:textAllCaps="false">
        </com.google.android.material.button.MaterialButton>

        <TextView
            android:id="@+id/continueQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/generateNewKeySubTitle"
            app:layout_constraintBottom_toTopOf="@id/nameInsert"
            app:layout_constraintStart_toStartOf="@id/generateNewKeySubTitle"
            app:layout_constraintEnd_toEndOf="@id/generateNewKeySubTitle"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor = "?android:title"
            android:text="@string/nameAddedKey"
            android:textAlignment="center"
            android:layout_marginTop="10dp">
        </TextView>

        <EditText
            android:id="@+id/nameInsert"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/nameHintAddedKey"
            app:layout_constraintTop_toBottomOf="@id/continueQuestion"
            app:layout_constraintStart_toStartOf="@id/continueQuestion"
            app:layout_constraintEnd_toEndOf="@id/continueQuestion"
            app:layout_constraintBottom_toTopOf="@+id/addContactButton"
            android:layout_marginTop="20dp"
            android:inputType="text">
        </EditText>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addContactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nameInsert"
            app:layout_constraintStart_toStartOf="@id/nameInsert"
            app:layout_constraintEnd_toStartOf="@id/cancelButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:text="@string/addContact"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="#4CAF50"
            app:layout_constraintHorizontal_chainStyle="spread">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nameInsert"
            app:layout_constraintStart_toEndOf="@id/addContactButton"
            app:layout_constraintEnd_toEndOf="@id/nameInsert"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="#F44336"
            android:layout_marginLeft="20dp">
        </com.google.android.material.button.MaterialButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>