<?xml version="1.0" encoding="utf-8"?>
<!--
* This XML is part of KeyCip Android app.
* The whole open source code is available in https://github.com/jff99/KeyCip
* Copyright (C) 2022 Jorge Fernández Fonseca
*
* This program is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/app_name"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"></ImageView>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="?android:title"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon"
        app:layout_constraintTop_toTopOf="@id/icon"></TextView>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/allHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05"></androidx.constraintlayout.widget.Guideline>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalEndGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.91"></androidx.constraintlayout.widget.Guideline>

            <TextView
                android:id="@+id/yourFiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filesTitle"
                android:textColor="?android:title"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/chipGroup"
                app:layout_constraintEnd_toStartOf="@+id/verticalEndGuide"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/verticalGuide"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <HorizontalScrollView
                android:id="@+id/chipGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintBottom_toTopOf="@+id/fileList"
                app:layout_constraintEnd_toEndOf="@id/verticalEndGuide"
                app:layout_constraintStart_toStartOf="@id/verticalGuide"
                app:layout_constraintTop_toBottomOf="@id/yourFiles">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:visibility="gone"
                    app:singleLine="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMessage"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/messagesChip"
                        app:chipIcon="@drawable/ic_baseline_message"
                        app:chipIconVisible="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipPhoto"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photosChip"
                        app:chipIcon="@drawable/ic_baseline_insert_photo"
                        app:chipIconVisible="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipVideo"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/videosChip"
                        app:chipIcon="@drawable/ic_baseline_video"
                        app:chipIconVisible="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipPDF"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/documentsChip"
                        app:chipIcon="@drawable/ic_baseline_pdf"
                        app:chipIconVisible="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipOtherFile"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/otherChip"
                        app:chipIcon="@drawable/ic_baseline_file"
                        app:chipIconVisible="true" />

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>


            <ListView
                android:id="@+id/fileList"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/verticalEndGuide"
                app:layout_constraintStart_toStartOf="@id/verticalGuide"
                app:layout_constraintTop_toBottomOf="@id/chipGroup"
                tools:listitem="@layout/file_item"></ListView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
